# goworlds

./: .gitlab-ci.yml  Taskfile.yml  docker-compose.e2e.yml  docker-compose.yml  todo
e2e/: .env  .gitignore  (+8 more)
service/: .env  .gitignore  Cargo.toml  Dockerfile  Taskfile.yml  application-dev.properties  build.gradle.kts  dbconfig.yml  docker-compose.yml  go.mod  log4rs.yml  pom.xml  settings.gradle.kts
service/cmd/service/: config.go  main.go
service/docker/: start.sh
service/internal/: nothing_test.go
service/internal/database/: database.go  database_suite_test.go  health.go  migrate.go  queryOne.go  queryOne_test.go
service/internal/health/: healthcheck.go
service/internal/health/handlers/: healthcheck.go  healthcheck_test.go  model.go
service/internal/password/: check.go  check_test.go  hash.go  hash_test.go
service/internal/server/: jsonResponse.go  jsonResponse_test.go  route.go  server.go
service/internal/users/: errors.go  model.go  retriever.go
service/migrations/: 0001.users_table.up.sql  0002.clients_table.up.sql  20190508172822-create-users-table.sql
service/src/: lib.rs  main.rs  settings.rs
service/src/database/: database.rs  mod.rs  test.rs  wrapper.rs
service/src/health/: healthcheck.rs  healthchecker.rs  http.rs  mod.rs  wiring.rs
service/src/model/: mod.rs
service/src/password/: check.rs  hash.rs  mod.rs
service/src/server/: mod.rs  server.rs
service/src/test/: http.rs  log.rs
service/src/users/: mod.rs  model.rs
service/testutils/: httpResponse.go
service/testutils/httptesting/: json.go  status.go  test.go
(+343 files in other folders)
