[package]
name = "goworlds-service"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
dotenv = "0.14.0"
config = "0.9.3"
serde = "1.0.91"
serde_json = "1.0.39"
log = "0.4.6"
log4rs = "0.8.3"
actix-web = "1.0.0-beta.3"
r2d2 = "0.8.4"
postgres = "0.16.0-rc.1"
r2d2_postgres = "0.15.0-rc.1"
dbmigrate-lib = "0.1.4"

[dev-dependencies]
assert-json-diff = "1.0.0"
